K8S Advanced/10/istioyaml/1.4/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-istio
  namespace: istio-system
spec:
  hosts:
    - 'kiali-istio.kubernets.cn'
  gateways:
    - allgateway
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
